--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ description = "Grind for a vanity multsig address"
 
 [dependencies]
 solana-sdk = "1.10.5"
+solana-program = "=1.17.22"
+bumpalo = "=3.8.0"
